--- a/gb/19/5/6/n11238635.md
+++ b/gb/19/5/6/n11238635.md
@@ -1,63 +1,65 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/mprjd2205/djy/blob/master/gb/nsc413.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/1.jpg" title="´ó¼ÍÔª"></a><a href="https://github.com/mprjd2205/djy/blob/master/gb/n24hr.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/3.jpg" title="¹ú¼ÊÐÂÎÅ"></a><a href="https://github.com/mprjd2205/djy/blob/master/gb/nsc413.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/4.jpg" title="´óÂ½ÐÂÎÅ"></a><a href="https://github.com/mprjd2205/djy/blob/master/gb/news392.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/5.jpg" title="ÆÀÂÛ"></a><a href="https://github.com/mprjd2205/djy/blob/master/gb/news2007.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/6.jpg" title="ÎÄ»¯"></a><a href="https://github.com/mprjd2205/djy/blob/master/gb/news2008.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/7.jpg" title="Éú»î"></a><a href="https://github.com/mprjd2205/djy/blob/master/gb/ncyule.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/8.jpg" title="ÓéÀÖ"></a><a href="https://github.com/mprjd2205/djy/blob/master/gb/nsc1002.md#1"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/9.jpg" title="½¡¿µ"><a href="https://www.youlucky.com"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/10.jpg" title="¹ºÎï"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://gitlab.com/szzdlab/www/raw/master/t/djy/12.jpg" title="¾è¿î"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/9p.md#1">ÉçÂÛ</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5657.md#1">ÈýÍË</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf6123.md#1">Ëß½­</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1176117.md#1">ÖÐ¹²Âô¹ú</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5773.md#1">Ì°¸¯ÒùÂÒ | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1176115.md#1">´Ü¸ÄÀúÊ·</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1176107.md#1">µ³¿ý»­Æ¤</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1320400.md#1">ÖÐ¹²¼äµý</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1176114.md#1">ÆÆ»µ´«Í³</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5287.md#1">¶ñ¹áÂúÓ¯</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/ncid278.md#1">ÈËÈ¨</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1176111.md#1">ÆÈº¦</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1235328.md#1">Êé¼®</a> | <a target="_blank" href="https://github.com/mprjd2205/www/blob/master/README.md?zsrh#1">·­Ç½</a></p><p><a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5562.md#1">Î±»ð</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf4378.md#1">ÎÊ´ð</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5792.md#1">ÆÊÎö</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5735.md#1">Á½°¶±È¶Ô</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf6119.md#1">¸÷¹ú°ý½±</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf6120.md#1">ÃñÖÚÉùÔ®</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf1188594.md#1">ÄÑÍü¼ÇÒä</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf3180.md#1">º£Íâºë´«</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5410.md#1">ÍòÈËÉÏ·Ã</a> | <a target="_blank" href="https://github.com/mprjd2205/ntdtv/blob/master/gb/prog1530_1.md#1">ºÍÆ½¿¹Òé</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf4386.md#1">Ö§³Ö</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf4389.md#1">ÕæÏà</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf5790.md#1">Ê¥Ôµ</a> | <a target="_blank" href="https://github.com/mprjd2205/djy/blob/master/gb/nf4786.md#1">ÉñÔÏ</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center></h2>
-<img src="http://i.epochtimes.com/assets/uploads/2019/05/1905060108111886-600x400.jpg" />
-<h6>5ÔÂ5ÈÕÍí£¬Ã÷ÄáËÕ´ïÖÝµÄSanum½ðÈÚ·þÎñ¹«Ë¾ÀÏ°åDennis KochÏÈÉúºÍÃ÷ÄáËÕ´ï´óÑ§¿Í×ù½ÌÊÚFran ChihanskiÅ®Ê¿ÔÚÃÀ¹ú±±´ï¿ÆËûÖÝ´ó¸£¿ËË¹ÇÐË¹ÌØ¸¥Àï´ÄÀñÌÃ£¨Grand Forks Chester Fritz Auditorium£©¹Û¿´ÁËÉñÔÏ±±ÃÀÒÕÊõÍÅµÄÑÝ³ö¡££¨³ÂâùÈ»£¯´ó¼ÍÔª£©
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/yxhgbq3433/www/master/t/djy/1.jpg" title="å¤§çºªå…ƒé¦–é¡µ" alt="å¤§çºªå…ƒé¦–é¡µ"></a><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/yxhgbq3433/www/master/t/djy/3.jpg" title="å›½é™…æ–°é—»" alt="å›½é™…æ–°é—»"></a><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/yxhgbq3433/www/master/t/djy/4.jpg" title="å¤§é™†æ–°é—»" alt="å¤§é™†æ–°é—»"></a><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/yxhgbq3433/www/master/t/djy/5.jpg" title="å¤§çºªå…ƒè¯„è®º" alt="å¤§çºªå…ƒè¯„è®º"></a><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/yxhgbq3433/www/master/t/djy/6.jpg" title="ä¼ ç»Ÿæ–‡åŒ–" alt="ä¼ ç»Ÿæ–‡åŒ–"></a><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/yxhgbq3433/www/master/t/djy/7.jpg" title="ç”Ÿæ´»æ¶ˆè´¹" alt="ç”Ÿæ´»æ¶ˆè´¹"></a><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/yxhgbq3433/www/master/t/djy/8.jpg" title="å¨±ä¹ä¼‘é—²" alt="å¨±ä¹ä¼‘é—²"></a><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/yxhgbq3433/www/master/t/djy/9.jpg" title="å¥åº·" alt="å¥åº·"></a><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/yxhgbq3433/www/master/t/djy/10a.jpg" title="ç‹¬å®¶" alt="ç‹¬å®¶"></a><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/yxhgbq3433/www/master/t/djy/12a.jpg" title="å¤´æ¡è¦é—»" alt="å¤´æ¡è¦é—»"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/yxhgbq3433/www/blob/master/README.md?zsrh#1">ç¿»å¢™</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf5657.md#1">ä¸‰é€€</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf6124.md#1">è¯‰æ±Ÿ</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf1176117.md#1">ä¸­å…±å–å›½</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf5773.md#1">è´ªè…æ·«ä¹±</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf1176115.md#1">çªœæ”¹åŽ†å²</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf1176107.md#1">å…šé­ç”»çš®</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf1320400.md#1">ä¸­å…±é—´è°</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf1176114.md#1">ç ´åä¼ ç»Ÿ</a> | <a target="_blank" href="https://github.com/yxhgbq3433/ntdtv/blob/master/gb/prog447_1.md#1">æ¶è´¯æ»¡ç›ˆ</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/ncid278.md#1">äººæƒ</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf1176111.md#1">è¿«å®³</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">æœŸåˆŠ</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf5562.md#1">ä¼ªç«</a></p><p><a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/9p.md#1">ç¤¾è®º</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf4378.md#1">é—®ç­”</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf5792.md#1">å‰–æž</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf5735.md#1">ä¸¤å²¸æ¯”å¯¹</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf6119.md#1">å„å›½è¤’å¥–</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf6120.md#1">æ°‘ä¼—å£°æ´</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf1188594.md#1">éš¾å¿˜è®°å¿†</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf3180.md#1">æµ·å¤–å¼˜ä¼ </a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf5410.md#1">ä¸‡äººä¸Šè®¿</a> | <a target="_blank" href="https://github.com/yxhgbq3433/www/blob/master/README.md?zsrh#1">å¹³å°é¦–é¡µ</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf4386.md#1">æ”¯æŒ</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf4389.md#1">çœŸç›¸</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf5790.md#1">åœ£ç¼˜</a> | <a target="_blank" href="https://github.com/yxhgbq3433/djy/blob/master/gb/nf4786.md#1">ç¥žéŸµ</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>å¤§å­¦æ•™æŽˆæ„Ÿä½©æŽ¨èï¼šç¥žéŸµæ¼”å‡ºå±•çŽ°å¼ºå¤§èƒ½é‡</h2>
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2019/05/1905060108111886-600x400.jpg" />
+<h6>5æœˆ5æ—¥æ™šï¼Œæ˜Žå°¼è‹è¾¾å·žçš„Sanumé‡‘èžæœåŠ¡å…¬å¸è€æ¿Dennis Kochå…ˆç”Ÿå’Œæ˜Žå°¼è‹è¾¾å¤§å­¦å®¢åº§æ•™æŽˆFran Chihanskiå¥³å£«åœ¨ç¾Žå›½åŒ—è¾¾ç§‘ä»–å·žå¤§ç¦å…‹æ–¯åˆ‡æ–¯ç‰¹å¼—é‡ŒèŒ¨ç¤¼å ‚ï¼ˆGrand Forks Chester Fritz Auditoriumï¼‰è§‚çœ‹äº†ç¥žéŸµåŒ—ç¾Žè‰ºæœ¯å›¢çš„æ¼”å‡ºã€‚ï¼ˆé™ˆæ€¡ç„¶ï¼å¤§çºªå…ƒï¼‰
 </h6>
 <hr>
-	<p>¡¾´ó¼ÍÔª2019Äê05ÔÂ07ÈÕÑ¶¡¿£¨´ó¼ÍÔª¼ÇÕß³ÂâùÈ»ÃÀ¹ú´ó¸£¿ËË¹±¨µ¼£©5ÔÂ5ÈÕÍí£¬Sanum½ðÈÚ·þÎñ¹«Ë¾ÀÏ°åDennis KochÏÈÉúºÍÃ÷ÄáËÕ´ï´óÑ§¿Í×ù½ÌÊÚFran ChihanskiÅ®Ê¿£¬ÔÚ<a href="https://github.com/mprjd2205/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD%E5%A4%A7%E7%A6%8F%E5%85%8B%E6%96%AF%E5%88%87%E6%96%AF%E7%89%B9%E5%BC%97%E9%87%8C%E8%8C%A8%E7%A4%BC%E5%A0%82.md">ÃÀ¹ú´ó¸£¿ËË¹ÇÐË¹ÌØ¸¥Àï´ÄÀñÌÃ</a>£¨Grand Forks Chester Fritz Auditorium£©¹Û¿´ÁË<a href="https://github.com/mprjd2205/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md">ÉñÔÏ</a>±±ÃÀÒÕÊõÍÅÔÚµ±µØµÄÊ×ÑÝ¡£</p>
-<p>KochÏÈÉúËµ£¬¡°Õâ¾ø¶ÔÊÇ»Ô»Í×³¹ÛµÄÑÝ³ö¡£ÎÒÓÐÒ»¸öÅ®¶ùÒ²ÊÇÎèµ¸ÑÝÔ±£¬ÎÒÏ£ÍûËýÄÜÀ´¹ÛÉÍ¡£ËýÊÇ¼ÓÖÝÊ¥µØÑÇ¸çµÄÒ»ÃûÎèµ¸ÑÝÔ±¡£µ±<a href="https://github.com/mprjd2205/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md">ÉñÔÏ</a>È¥¼ÓÖÝÑÝ³öÊ±£¬ÎÒÏ£ÍûËýÄÜÓÐ»ú»á¿´µ½ÉñÔÏ¡£¡±</p>
-<p>¡°ÎÒ»á¸æËßËý£¬ÄÈËþÀò£¬ÓÐÒ»¸öºÜ°ôµÄÎèµ¸ÑÝ³ö£¬ÊÇÄã±ØÐëÒª¿´µÄ¡£Õâ¼òÖ±ÊÇÒ»¸öÆæ¹Û¡¢Ê¢Ñç¡£Äã¾ø¶Ô²»Ïë´í¹ýËý¡£¡±</p>
-<p>Koch´ÓÑÝ³öÖÐ¸ÐÊÜµ½ºÜ¶àºÜÇ¿´óµÄÄÜÁ¿£¬¡°ÎÒ¾õµÃÕâÐ©ÄÜÁ¿À´×Ô<a href="https://github.com/mprjd2205/djy/blob/master/gb/tag/%E8%89%BA%E6%9C%AF%E5%AE%B6.md">ÒÕÊõ¼Ò</a>µÄÈÈÇé£¬Îèµ¸ÑÝÔ±ºÜÓÐ¼¤Çé¡£ÎÒÁË½âµ½ÉñÔÏÔÚÊÀ½ç¸÷µØÑ²ÑÝµÄÊ¢¿ö£¬ÀÛ»ýÉÏÇ§³¡ÑÝ³ö£¬Ê¢¿ö¿ÕÇ°¡£ÎÒ¸Ðµ½£¬Ã¿Ò»¸ö½ÚÄ¿¶¼ÔÚÎªÏÂÒ»¸ö½ÚÄ¿Ðî»ýÄÜÁ¿£¬ÕâÊÇ¾ªÈËµÄ¡£¡±</p>
-<p>¡°<a href="https://github.com/mprjd2205/djy/blob/master/gb/tag/%E8%89%BA%E6%9C%AF%E5%AE%B6.md">ÒÕÊõ¼Ò</a>µÄÈÈÇé¸ÐÈ¾×Å¹ÛÖÚ£¬ÑÝ³ö½áÊøºó¹ÛÖÚÈ«ÌåÆðÁ¢¹ÄÕÆ¡£¾­¾ÃµÄÕÆÉùËµÃ÷ÁËÒ»ÇÐ¡£Ö»ÒªÓÐÒ»¸ö±íÑÝÕßÓ®µÃ¹ÛÖÚÆðÁ¢¹ÄÕÆ£¬¾ÍÒÑ¾­ÄÜËµÃ÷ÑÝ³öÓÐ¶àÃ´ÊÜ»¶Ó­¡£¶øÉñÔÏËùÓÐµÄÒÕÊõ¼Ò¶¼Ó®µÃÁËÂú³¡¹ÛÖÚµÄÕÆÉù¡£¡±</p>
-<p>ChihanskiÔò¾õµÃ×Ô¼ºÃ¿Ê±Ã¿¿Ì¶¼¸ÐÊÜµ½Ç¿´óÄÜÁ¿£¬¡°ÎÒ¾õµÃÄÜÁ¿À´×ÔÎèµ¸ÑÝÔ±£¬À´×Ô¹ÊÊÂºÍ¸è´ÊµÄÐÅÏ¢£¬À´×ÔÉñÔÏÑÝ³öÖÐµÄÒ»ÇÐÕ¹ÏÖ¡£ÎÒ»á½«ÉñÔÏÍÆ¼ö¸øÃ¿Ò»¸öÈË¡£¡±</p>
-<p>Ëý¾õµÃÉñÔÏÄÜÁ¿»¹À´×ÔÓÚÒÕÊõ¼ÒµÄÐÅÑö£¬¡°ÉñÔÏÒÕÊõ¼ÒÔÚÊÀ½ç¸÷µØÑ²ÑÝ£¬Îª¹ÛÖÚÏ×ÉÏÈç´Ë¾«²ÊµÄÑÝ³ö¡£ÎÒ¿´µ½ºÜ¶à¹ÛÖÚÔÚ¹Û¿´ÑÝ³öµÄÊ±ºò±»¸Ð¶¯µÃÂäÀá¡£È·Êµ£¬µ±½ñÓÐÐ©ÊÂÇéÕýÔÚ·¢Éú¡£µ«ÊÇ£¬ÄãÖªµÀ£¬ÄãÕýÔÚÊÔÍ¼½â¾öÕâ¸öÎÊÌâ¡£ËüËäÈ»²»»áÔÚÒ»Ò¹Ö®¼ä·¢Éú£¬µ«ÊÇÖ»Òª±ü³Ö×ÅÉñÔÏµÄ¾«Éñ£¬ÎÒÏàÐÅÖð²½»á×öµ½¡£¡±</p>
-<p>Koch·Ç³£¸Ð¼¤ÉñÔÏÖÂÁ¦ÓÚ»Ö¸´<a href="https://github.com/mprjd2205/djy/blob/master/gb/tag/%E4%BC%A0%E7%BB%9F%E6%96%87%E5%8C%96.md">´«Í³ÎÄ»¯</a>£¬¡°ÖÐ¹²µÄ´æÔÚÓÐÊ±ÐèÒª¼¸´úÈËÀ´¸Ä±äËü£¬ÕâÌ«¿É±¯ÁË£¬ÒÅº¶µÄÊÇ£¬ÔÚÖÐ¹ú¿´²»µ½ÉñÔÏ¡£¶øÉñÔÏµÄ¸¶³öÊÇ·Ç³£ÖµµÃÇÕÅåµÄ¡£¡±</p>
-<p>ÉíÎªÒ»Ãû´óÑ§½ÌÊÚ£¬ChihanskiÒ²·Ç³£ÔÞÍ¬£¬¡°ÕâÍ¨³£ÐèÒªÄêÇáÒ»´ú¸¶³öÅ¬Á¦¡£ÉñÔÏÈÃÎÒÃÇ¿´µ½£¬ÊÀ½çÉÏ»¹ÓÐºÜ¶àÈËÔÚ¼áÊØ×ÅÐÅÑö£¬Ò²ÐíËý±ØÐë¾­ÀúÄêÇáÒ»´úÖð²½Å¬Á¦²ÅÄÜÍê³É£¬µ«ÊÇÎÒÃÇ²»ÄÜ·ÅÆúÏ£Íû¡£¡±</p>
-<p>ËýÔÞÉÍÉñÔÏ½ÌÓýÒâÒå·Ç·²£¬¡°¸è³ª¼ÒÔÚÑÝ³ªÊ±£¬ÎÒ¿ÉÒÔ¿´µ½±³¾°ÌìÄ»ÉÏµÄÓ¢Óï·­Òë£¬¸è´ÊÖÐ°üº¬ÁËºÜ¶àÕæÊµµÄÐÅÏ¢¡£¹ÛÖÚÖÐÓÐºÜ¶àÄêÇáÈË£¬¶ÔËûÃÇÒ»¶¨ºÜÓÐÆô·¢¡£¡±</p>
-<p>¡°±³¾°ÌìÄ»ÃÀ¼«ÁË£¬ÎÒ¾ªÑÈÉñÔÏÒÕÊõ¼ÒÊÇÈçºÎ½«ÌìÄ»ºÍÎèµ¸½áºÏµÃÈç´ËÍêÃÀ£¬ÕâÕæÊÇÌ«°ôÁË¡£ÕâÊÇÒ»¼þÒÕÊõÆ·¡£»¹ÓÐÎèµ¸¼Ò£¬¼¼ÒÕ³¬Èº¡£¡±ËýËµ¡£</p>
-<p>¡°ËäÈ»Îèµ¸ÖÐÃ»ÓÐÓïÑÔ£¬µ«ÊÇÎÒÃÇ¿ÉÒÔºÜÈÝÒ×µÄÀí½âÎèµ¸Ëù±í´ïµÄÄÚº­¡£ºÜ¸ßÐËÖ÷³ÖÈËÔÚÎèµ¸Ö®¼äÌá¹©ÁËºÜºÃµÄ½éÉÜ£¬°ïÖúÎÒÃÇ¸úËæ×ÅÎèµ¸£¬¾ÍºÃÏñÔÚ×·ËæÒ»²¿¸è¾çÒ»Ñù£¬ÎÒÃÇµÄÇé¸Ð¸úËæ×Å¹ÊÊÂÇé½ÚÆð·ü£¬ÕâÌ«°ôÁË¡£¡±</p>
-<p>ÔðÈÎ±à¼­£ºÍõÓäÔÃ</p>
+	<p>ã€å¤§çºªå…ƒ2019å¹´05æœˆ07æ—¥è®¯ã€‘ï¼ˆå¤§çºªå…ƒè®°è€…é™ˆæ€¡ç„¶ç¾Žå›½å¤§ç¦å…‹æ–¯æŠ¥å¯¼ï¼‰5æœˆ5æ—¥æ™šï¼ŒSanumé‡‘èžæœåŠ¡å…¬å¸è€æ¿Dennis Kochå…ˆç”Ÿå’Œæ˜Žå°¼è‹è¾¾å¤§å­¦å®¢åº§æ•™æŽˆFran Chihanskiå¥³å£«ï¼Œåœ¨<ahref="https://github.com/yxhgbq3433/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD%E5%A4%A7%E7%A6%8F%E5%85%8B%E6%96%AF%E5%88%87%E6%96%AF%E7%89%B9%E5%BC%97%E9%87%8C%E8%8C%A8%E7%A4%BC%E5%A0%82.md#1">ç¾Žå›½å¤§ç¦å…‹æ–¯åˆ‡æ–¯ç‰¹å¼—é‡ŒèŒ¨ç¤¼å ‚</a>ï¼ˆGrand Forks Chester Fritz Auditoriumï¼‰è§‚çœ‹äº†<ahref="https://github.com/yxhgbq3433/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">ç¥žéŸµ</a>åŒ—ç¾Žè‰ºæœ¯å›¢åœ¨å½“åœ°çš„é¦–æ¼”ã€‚</p>
+<p>Kochå…ˆç”Ÿè¯´ï¼Œâ€œè¿™ç»å¯¹æ˜¯è¾‰ç…Œå£®è§‚çš„æ¼”å‡ºã€‚æˆ‘æœ‰ä¸€ä¸ªå¥³å„¿ä¹Ÿæ˜¯èˆžè¹ˆæ¼”å‘˜ï¼Œæˆ‘å¸Œæœ›å¥¹èƒ½æ¥è§‚èµã€‚å¥¹æ˜¯åŠ å·žåœ£åœ°äºšå“¥çš„ä¸€åèˆžè¹ˆæ¼”å‘˜ã€‚å½“<ahref="https://github.com/yxhgbq3433/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">ç¥žéŸµ</a>åŽ»åŠ å·žæ¼”å‡ºæ—¶ï¼Œæˆ‘å¸Œæœ›å¥¹èƒ½æœ‰æœºä¼šçœ‹åˆ°ç¥žéŸµã€‚â€</p>
+<p>â€œæˆ‘ä¼šå‘Šè¯‰å¥¹ï¼Œå¨œå¡”èŽ‰ï¼Œæœ‰ä¸€ä¸ªå¾ˆæ£’çš„èˆžè¹ˆæ¼”å‡ºï¼Œæ˜¯ä½ å¿…é¡»è¦çœ‹çš„ã€‚è¿™ç®€ç›´æ˜¯ä¸€ä¸ªå¥‡è§‚ã€ç››å®´ã€‚ä½ ç»å¯¹ä¸æƒ³é”™è¿‡å¥¹ã€‚â€</p>
+<p>Kochä»Žæ¼”å‡ºä¸­æ„Ÿå—åˆ°å¾ˆå¤šå¾ˆå¼ºå¤§çš„èƒ½é‡ï¼Œâ€œæˆ‘è§‰å¾—è¿™äº›èƒ½é‡æ¥è‡ª<ahref="https://github.com/yxhgbq3433/djy/blob/master/gb/tag/%E8%89%BA%E6%9C%AF%E5%AE%B6.md#1">è‰ºæœ¯å®¶</a>çš„çƒ­æƒ…ï¼Œèˆžè¹ˆæ¼”å‘˜å¾ˆæœ‰æ¿€æƒ…ã€‚æˆ‘äº†è§£åˆ°ç¥žéŸµåœ¨ä¸–ç•Œå„åœ°å·¡æ¼”çš„ç››å†µï¼Œç´¯ç§¯ä¸Šåƒåœºæ¼”å‡ºï¼Œç››å†µç©ºå‰ã€‚æˆ‘æ„Ÿåˆ°ï¼Œæ¯ä¸€ä¸ªèŠ‚ç›®éƒ½åœ¨ä¸ºä¸‹ä¸€ä¸ªèŠ‚ç›®è“„ç§¯èƒ½é‡ï¼Œè¿™æ˜¯æƒŠäººçš„ã€‚â€</p>
+<p>â€œ<ahref="https://github.com/yxhgbq3433/djy/blob/master/gb/tag/%E8%89%BA%E6%9C%AF%E5%AE%B6.md#1">è‰ºæœ¯å®¶</a>çš„çƒ­æƒ…æ„ŸæŸ“ç€è§‚ä¼—ï¼Œæ¼”å‡ºç»“æŸåŽè§‚ä¼—å…¨ä½“èµ·ç«‹é¼“æŽŒã€‚ç»ä¹…çš„æŽŒå£°è¯´æ˜Žäº†ä¸€åˆ‡ã€‚åªè¦æœ‰ä¸€ä¸ªè¡¨æ¼”è€…èµ¢å¾—è§‚ä¼—èµ·ç«‹é¼“æŽŒï¼Œå°±å·²ç»èƒ½è¯´æ˜Žæ¼”å‡ºæœ‰å¤šä¹ˆå—æ¬¢è¿Žã€‚è€Œç¥žéŸµæ‰€æœ‰çš„è‰ºæœ¯å®¶éƒ½èµ¢å¾—äº†æ»¡åœºè§‚ä¼—çš„æŽŒå£°ã€‚â€</p>
+<p>Chihanskiåˆ™è§‰å¾—è‡ªå·±æ¯æ—¶æ¯åˆ»éƒ½æ„Ÿå—åˆ°å¼ºå¤§èƒ½é‡ï¼Œâ€œæˆ‘è§‰å¾—èƒ½é‡æ¥è‡ªèˆžè¹ˆæ¼”å‘˜ï¼Œæ¥è‡ªæ•…äº‹å’Œæ­Œè¯çš„ä¿¡æ¯ï¼Œæ¥è‡ªç¥žéŸµæ¼”å‡ºä¸­çš„ä¸€åˆ‡å±•çŽ°ã€‚æˆ‘ä¼šå°†ç¥žéŸµæŽ¨èç»™æ¯ä¸€ä¸ªäººã€‚â€</p>
+<p>å¥¹è§‰å¾—ç¥žéŸµèƒ½é‡è¿˜æ¥è‡ªäºŽè‰ºæœ¯å®¶çš„ä¿¡ä»°ï¼Œâ€œç¥žéŸµè‰ºæœ¯å®¶åœ¨ä¸–ç•Œå„åœ°å·¡æ¼”ï¼Œä¸ºè§‚ä¼—çŒ®ä¸Šå¦‚æ­¤ç²¾å½©çš„æ¼”å‡ºã€‚æˆ‘çœ‹åˆ°å¾ˆå¤šè§‚ä¼—åœ¨è§‚çœ‹æ¼”å‡ºçš„æ—¶å€™è¢«æ„ŸåŠ¨å¾—è½æ³ªã€‚ç¡®å®žï¼Œå½“ä»Šæœ‰äº›äº‹æƒ…æ­£åœ¨å‘ç”Ÿã€‚ä½†æ˜¯ï¼Œä½ çŸ¥é“ï¼Œä½ æ­£åœ¨è¯•å›¾è§£å†³è¿™ä¸ªé—®é¢˜ã€‚å®ƒè™½ç„¶ä¸ä¼šåœ¨ä¸€å¤œä¹‹é—´å‘ç”Ÿï¼Œä½†æ˜¯åªè¦ç§‰æŒç€ç¥žéŸµçš„ç²¾ç¥žï¼Œæˆ‘ç›¸ä¿¡é€æ­¥ä¼šåšåˆ°ã€‚â€</p>
+<p>Kochéžå¸¸æ„Ÿæ¿€ç¥žéŸµè‡´åŠ›äºŽæ¢å¤<ahref="https://github.com/yxhgbq3433/djy/blob/master/gb/tag/%E4%BC%A0%E7%BB%9F%E6%96%87%E5%8C%96.md#1">ä¼ ç»Ÿæ–‡åŒ–</a>ï¼Œâ€œä¸­å…±çš„å­˜åœ¨æœ‰æ—¶éœ€è¦å‡ ä»£äººæ¥æ”¹å˜å®ƒï¼Œè¿™å¤ªå¯æ‚²äº†ï¼Œé—æ†¾çš„æ˜¯ï¼Œåœ¨ä¸­å›½çœ‹ä¸åˆ°ç¥žéŸµã€‚è€Œç¥žéŸµçš„ä»˜å‡ºæ˜¯éžå¸¸å€¼å¾—é’¦ä½©çš„ã€‚â€</p>
+<p>èº«ä¸ºä¸€åå¤§å­¦æ•™æŽˆï¼ŒChihanskiä¹Ÿéžå¸¸èµžåŒï¼Œâ€œè¿™é€šå¸¸éœ€è¦å¹´è½»ä¸€ä»£ä»˜å‡ºåŠªåŠ›ã€‚ç¥žéŸµè®©æˆ‘ä»¬çœ‹åˆ°ï¼Œä¸–ç•Œä¸Šè¿˜æœ‰å¾ˆå¤šäººåœ¨åšå®ˆç€ä¿¡ä»°ï¼Œä¹Ÿè®¸å¥¹å¿…é¡»ç»åŽ†å¹´è½»ä¸€ä»£é€æ­¥åŠªåŠ›æ‰èƒ½å®Œæˆï¼Œä½†æ˜¯æˆ‘ä»¬ä¸èƒ½æ”¾å¼ƒå¸Œæœ›ã€‚â€</p>
+<p>å¥¹èµžèµç¥žéŸµæ•™è‚²æ„ä¹‰éžå‡¡ï¼Œâ€œæ­Œå”±å®¶åœ¨æ¼”å”±æ—¶ï¼Œæˆ‘å¯ä»¥çœ‹åˆ°èƒŒæ™¯å¤©å¹•ä¸Šçš„è‹±è¯­ç¿»è¯‘ï¼Œæ­Œè¯ä¸­åŒ…å«äº†å¾ˆå¤šçœŸå®žçš„ä¿¡æ¯ã€‚è§‚ä¼—ä¸­æœ‰å¾ˆå¤šå¹´è½»äººï¼Œå¯¹ä»–ä»¬ä¸€å®šå¾ˆæœ‰å¯å‘ã€‚â€</p>
+<p>â€œèƒŒæ™¯å¤©å¹•ç¾Žæžäº†ï¼Œæˆ‘æƒŠè®¶ç¥žéŸµè‰ºæœ¯å®¶æ˜¯å¦‚ä½•å°†å¤©å¹•å’Œèˆžè¹ˆç»“åˆå¾—å¦‚æ­¤å®Œç¾Žï¼Œè¿™çœŸæ˜¯å¤ªæ£’äº†ã€‚è¿™æ˜¯ä¸€ä»¶è‰ºæœ¯å“ã€‚è¿˜æœ‰èˆžè¹ˆå®¶ï¼ŒæŠ€è‰ºè¶…ç¾¤ã€‚â€å¥¹è¯´ã€‚</p>
+<p>â€œè™½ç„¶èˆžè¹ˆä¸­æ²¡æœ‰è¯­è¨€ï¼Œä½†æ˜¯æˆ‘ä»¬å¯ä»¥å¾ˆå®¹æ˜“çš„ç†è§£èˆžè¹ˆæ‰€è¡¨è¾¾çš„å†…æ¶µã€‚å¾ˆé«˜å…´ä¸»æŒäººåœ¨èˆžè¹ˆä¹‹é—´æä¾›äº†å¾ˆå¥½çš„ä»‹ç»ï¼Œå¸®åŠ©æˆ‘ä»¬è·Ÿéšç€èˆžè¹ˆï¼Œå°±å¥½åƒåœ¨è¿½éšä¸€éƒ¨æ­Œå‰§ä¸€æ ·ï¼Œæˆ‘ä»¬çš„æƒ…æ„Ÿè·Ÿéšç€æ•…äº‹æƒ…èŠ‚èµ·ä¼ï¼Œè¿™å¤ªæ£’äº†ã€‚â€</p>
+<p>è´£ä»»ç¼–è¾‘ï¼šçŽ‹æ„‰æ‚¦</p>
 	
 <hr>
 
-#### ±¾ÎÄ×ª×Ô<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>£¨¹úÄÚÐèÓÃ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>²ÅÄÜ·ÃÎÊ£©
-> Ô­ÎÄ£º<a href="http://www.epochtimes.com/gb/19/5/6/n11238635.htm"></a>
 
-
-#### ÏÂÔØ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>Ïà¹ØÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/8/19/n11462379.htm">²ÌÇÙ·­³ª¡¶¸æ°×ÆøÇò¡· ÖÜ¶­£º°¥ßÏ²Ì½ã²»´íÅ¶</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/18/n11391565.htm">À¥ÁèÊ±ÉÐ°®ÔË¶¯ ³ÉÖªÃûÆ·ÅÆ×îÐÂÈ«Çò´úÑÔÈË</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/20/n11336607.htm">ÖÜ¶­·ò¸¾´òÀºÇòÐã¶÷°® À¥ÁèÔËÇòÅÜÎ»ÈýÍ¶ÈýÖÐ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/15/n11260150.htm">À¥Áè¿²³ÇÓ°Õ¹ÁÁÏà ÖÜ½ÜÂ×°ç·ÛË¿Î§¹Û</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/2/n11229766.htm">ÎªÅÄÏ·³£´ø¶ùÅ®µ¹Ê±²î À¥Áè£ºÎÒÊÇ¸ö×ÔË½µÄÂè</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/2/11/n11038441.htm">ÏÖÉíÖÜ½ÜÂ×ÑÝ³ª»á ÕÂ×ÓâùÉ¹ÓëÀ¥ÁèÇ×ÃÜºÏÓ°</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/1/16/n10980015.htm">ÖÜ½ÜÂ×É¹ÂèÂèÊ±ÉÐÕÕ À¥ÁèÒ»¾ä»°¼ûÖ¤ÆÅÏ±¸ÐÇé</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/1/7/n10958529.htm">À¥ÁèµÇÊ±ÉÐÔÓÖ¾·âÃæ ¸öÐÔ°®¶ñ×÷¾ç</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/7/27/n10596149.htm">Â¼½ÚÄ¿ÏòÖÜ¶­Ñû¸è£¿ÀîÒ×·å£ºÅÂ±»¾Ü¾øºÜÞÏÞÎ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/3/13/n10215306.htm">À¥Áè·ÖÏíÖÜ¶­ÌùÐÄÐ¡¾Ù¶¯ ÆØ²»ÈÃ¶ùÅ®Â¶Á³Ô­Òò</a></li>
-
-#### ÏÂÔØ<a href="https://git.io/JesJV">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>ÈÈÃÅÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/11/7/n11638837.htm">ÀëÆæËÀÍöµÄÖØÇìÊé¼ÇÈÎÑ§·æ ±»Ö¸Éæ¶àÆðÔ©°¸</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/7/n11640298.htm">ÖÐÐ¡ÒøÐÐ¼·¶Ò³±ÆµÏÖ ÖÐ¹²½ðÈÚÎ¯¼±ÉÌ¶Ô²ß</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/7/n11639897.htm">¡¾ÐÂÎÅ¿´µã¡¿ÃÀÖØÉêÍ£»ðµ×Ïß ±±¾©´ó¶¯×÷Ê¾ºÃ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/7/n11639300.htm">¼ÌÍõË¼´Ïºó ÅËÊ¯ÒÙ¶ù×ÓÅËÈðÇå¿ÕÎ¢²©</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/11/n11582046.htm">ÌÆ´úÊ¹ÕßÆ¯Á÷µ½¾ÞÈË¹ú</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/31/n11625562.htm">¡¾²Å×Ó¼ÑÈË¡¿½èººÈËÉí·Ý¼ÞÇ¬Â¡ÔøËïµÄÂúÇå²ÅÅ®</a></li>
-> <li><a href="http://www.epochtimes.com/gb/15/4/21/n4416242.htm">Ôã¿·Ö®ÆÞ²»ÏÂÌÃ ¹ÅÈËÊÓ»éÒöÎªÈËÂ×Ö®±¾</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/10/25/n11612042.htm">¡¾²Å×Ó¼ÑÈË¡¿Áº×£µÄ¹ÊÊÂ ÎÒÃÇ¶Á¶®ÁËÂð£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/6/n11638183.htm">¶ÅãëÔóÉàÕ½³Â°ÙÏéºóºôÓõ£º¼¯ÖÐ¾«Éñ×ö¶ÔµÄÊÂ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/5/n11635898.htm">ÕÂ×ÓâùÊÔ¾µÈÕ±¾ÒÕ¼¿ ÔøÒò½öËµËÄ¸ö×Ö²ÒÔâÌÔÌ­</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/7/n11639534.htm">ÁÖÖ¾Áá17ÈÕ»éÑç ÁÖÒÀ³¿ÊÕÏ²ÌûÒÅº¶ÎÞ·¨¸°Ñç</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/5/n11635562.htm">É¹Í··¢ÕÚÑÛ¼Ó¿ÚÕÖÉú»îÕÕ ÈÝ×æ¶ùÒÉÔâ´óÂ½·âÉ±</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/5/n11635746.htm">ÑöÍû45¶È³ª×ËÔµºÎÁ·³É ·ÑÓñÇå½Ò¸èÊÖÉúÑÄÃØÐÁ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/4/16/n10309074.htm">¡¾Ãû¾ä¹ÊÊÂ¡¿´óÊ÷½«¾ü</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/7/n11640231.htm">¡¾ÐÂÎÅ¿´µã¡¿ËÄÖÐÇ¿»¯µ³¹ú Ðé»¯ÈËÃñ ¸Ä¸ïÒÑËÀ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/7/n11639377.htm">ÈÏÇåÖÐ¹²²Ð±© ¸ÛÈË¶Ô·¨ÂÖ¹¦µÄÈÏÊ¶Óú¼ÓÕýÃæ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/6/n11636669.htm">Íõ½¡ÁÖ¶À×ÓÍõË¼´ÏÁÐÈë±»Ö´ÐÐÈËÃûµ¥ µÇÉÏÈÈËÑ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/6/n11636278.htm">¡¾·­Ç½±Ø¿´¡¿·ÖÎö£ºËÄÖÐÈ«»á¹«±¨»òÐ¹´óÃØÃÜ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/11/6/n11638219.htm">ÁÖÖ£±»Ï°º«°ÚÉÏÌ¨ Ïã¸Û²½ÈëºÚ°µÊ±ÆÚ</a></li>
+<strong>ç›¸å…³æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/19/4/24/n11211186.md#1">500å¼ºä¼ä¸šè‘£äº‹æ€»ç»ç†ï¼šç¥žéŸµè‰ºæœ¯å®¶æœ‰å‹‡æ°”</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/19/4/29/n11220863.md#1">ä¸­å›½ä¼ ç»Ÿæ–‡åŒ–åº”æˆä¸ºä¸»æµ ä½œå®¶èµžç¥žéŸµç¾Žå¦™è‡³æž</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/19/5/6/n11236752.md#1">â€œæ¸©æš–äººå¿ƒâ€ å…¬å¸è€æ¿æ„Ÿè°¢ç¥žéŸµè‰ºæœ¯å®¶</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/19/5/6/n11236847.md#1">ä½“éªŒä¼ ç»Ÿæ–‡åŒ– å…¨çƒæ€§å¨±ä¹å…¬å¸å‰¯æ€»æŽ¨èç¥žéŸµ</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/19/5/6/n11237185.md#1">ç¥žéŸµæ¢å®å£®è§‚ åŒ—è¾¾ç§‘ä»–å·žå¤§å­¦é€€ä¼‘æ•™æŽˆç››èµž</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/19/5/6/n11237308.md#1">ç¥žéŸµå¤å…´ä¸­åŽä¼ ç»Ÿæ–‡åŒ– å†›éœ€å¤„ç»ç†å¿ƒç”Ÿæ•¬ç•</a></li>
 <hr>
 
-#### ÊÖ»úÉÏ³¤°´²¢¸´ÖÆÏÂÃæ¶þÎ¬Âë·ÖÏí±¾ÎÄÕÂ£º<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/mprjd2205/djy/blob/master/gb/19/5/6/n11238635.md%231" title="·ÖÏí±¾ÎÄÕÂ"></td><td VALIGN=TOP><a href="https://github.com/mprjd2205/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/wei-f1.jpg" title="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"  alt="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"></a><br><a href="https://github.com/mprjd2205/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/yong-h.jpg" title="ÓÀºãµÄ¼ûÖ¤"  alt="ÓÀºãµÄ¼ûÖ¤"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/shang-lnz.jpg" title="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"  alt="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/huo-z3.jpg" title="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"  alt="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/huo-z4.jpg" title="Ö¤ÈËÃèÊö»îÕª¿Ö²À"  alt="Ö¤ÈËÃèÊö»îÕª¿Ö²À"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/huo-z1.jpg" title="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"  alt="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/ma-ks.jpg" title="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"  alt="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/chang-zs.jpg" title="²Ø×ÖÊ¯ ÔÌÌì»ú"  alt="²Ø×ÖÊ¯ ÔÌÌì»ú"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/st1.jpg" title="¹Ø×¢3ÒÚÈËÈýÍË"  alt="¹Ø×¢3ÒÚÈËÈýÍË"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/jie-t.jpg" title="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"  alt="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/gao-zs.jpg" title="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"  alt="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/sj1.jpg" title="303ÍòÈË¾Ù±¨½­ÔóÃñ"  alt="303ÍòÈË¾Ù±¨½­ÔóÃñ"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/sj2.jpg" title="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"  alt="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/liangan.jpg" title="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"  alt="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/jia-ndzl.jpg" title="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"  alt="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/xiao-wd.jpg" title="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"  alt="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/yindu.jpg" title="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"  alt="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/xie-j.jpg" title="²»Ò»ÑùµÄº£ÍâÐ£Ô°"  alt="²»Ò»ÑùµÄº£ÍâÐ£Ô°"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/li-up.jpg" title="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"  alt="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/zfl2.jpg" title="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"  alt="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/zhen-h.jpg" title="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"  alt="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/dalu-sk.jpg" title="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"  alt="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"></a><br><a href="https://github.com/mprjd2205/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/zfl1.jpg" title="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"  alt="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"></a><br><a href="https://github.com/mprjd2205/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://gitlab.com/szzdlab/djy/raw/master/gb/300/fq1.jpg" title="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"  alt="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"></a><br></td></tr></table>
+
+<strong>ç¼–è¾‘æŽ¨èï¼š</strong>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/7/n11169990.md#1" target="_blank">å…±äº§æš´æ”¿å½•ï¼šè€æŒåŽäººå…±äº§å‰åŽçš„å¤„å¢ƒå˜åŒ–</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/22/n11340432.md#1" target="_blank">ç¾Žå›½åŠ¡é™¢å¹´åº¦æŠ¥å‘Š æ‰¹ä¸­å…±ä¸¥é‡æ‰“åŽ‹å®—æ•™è‡ªç”±</a></li>
+<hr>
+
+<strong>çƒ­é—¨æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/1/26/n12711986.md#1">é¢„è¨€è¯•æžï¼šå…±äº§å…šäº¡äºŽä½•æ—¶ï¼Ÿ</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/1/30/n12723183.md#1">ã€è§£å¯†æ—¶åˆ†ã€‘æ‡‚å¾—é¸Ÿè¯­ åŽ†å²ä¸ŠçœŸæœ‰è¿™æ ·çš„äºº</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/2/n12728948.md#1">ã€è§£å¯†æ—¶åˆ†ã€‘æ–¯é‡Œå…°å¡å‰æ€»ç»Ÿè½¬ä¸–å†œå®¶ç”·å­©</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/20/12/29/n12651261.md#1">è½®å›žè½¬ç”Ÿ å†¤å®¶å˜æˆæ¯å­</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/1/18/n12695507.md#1">ã€å‘½ç†ã€‘è¢«å†¤æž‰é™·å®³çš„å¥½äºº çš‡å¤©èƒ½ä¸ç®¡å—ï¼Ÿ</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/3/n12731313.md#1">ã€è´¢å•†å¤©ä¸‹ã€‘æ±½è½¦èŠ¯ç‰‡å‘Šæ€¥ ç¾Žæ—¥æ¬§å‘å°æ¹¾å‘¼æ•‘</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/2/n12728803.md#1">ã€æ—¶äº‹å†›äº‹ã€‘ä»¥è‰²åˆ—è­¦å‘Šç¾Ž æ”¾å®½ä¼Šæœ—åˆ¶è£å³å®£æˆ˜</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/3/n12731466.md#1">ã€ç§¦é¹ç›´æ’­ã€‘ç­‰ä¸åˆ°æ‹œç™»ç”µè¯ ä¹ è¿‘å¹³ç€æ€¥å—ï¼Ÿ</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/2/n12727425.md#1">æŽ¥å—å‘åž‹å¸ˆä¹‰å‰ª æµæµªæ±‰ç§’å˜ç»…å£«ç”·éœ‡æƒŠç½‘å‹</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/1/n12726784.md#1">ã€ç§¦é¹ç›´æ’­ã€‘ç¼…å†›æ–¹æŠ“æ˜‚å±±ç´ å­£ æ€¥åæ‹œç™»ä¹ è¿‘å¹³ï¼Ÿ</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/2/n12728478.md#1">ä¸­å…±å®˜åª’ç¾¤æ‰¹â€œåŽ•æ‰€é©å‘½â€æ‰“äº†è°çš„è„¸ï¼Ÿ</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/3/n12729203.md#1">é»Žå§¿æºä¸‰ä¸ªå¥³å„¿è¡Œå±± ç²‰ä¸æ„å¤–èšç„¦ä¸€åŒæ³¢éž‹</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/1/n12726330.md#1">51å²å‘¨ä¼ é›„ç™»é™†ç»¼ 22å²å­Ÿç¾Žå²å½“å¯¼å¸ˆå¼•ç‹‚æ‰¹</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/2/n12726845.md#1">é‡‘é©¬å½±åŽé©¬æ€çº¯ç–‘æ‚£æŠ‘éƒç—‡ åœå·¥åŠå¹´åŽé¦–å‘å£°</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/2/n12728875.md#1">èŽ·é™ˆå¤å¤¸èµžé˜³å…‰åˆæ¼‚äº® æ¨é¢–é»˜é»˜ç‚¹èµžè§†é¢‘è‡ªåŠ±</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/2/n12727150.md#1">ç«‹ç™¾ç—…æ¯’è‡´æ­»çŽ‡é«˜ ä¸“å®¶ç¤ºè­¦ä¸‹ä¸€åœºå¤§æµè¡Œå¨èƒ</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/1/n12726617.md#1">è¿™æ—¶å–æ°´æŽ’æ¯’å¿«ï¼æ—©æ™šå–å¯¹æ°´å…»ç”Ÿ è¿˜èƒ½æŽ§è¡€ç³–</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/2/n12727769.md#1">è‹±å†›æˆ˜æœºç©ºè¢­ä¼Šæ‹‰å…‹æ´žç©´ å‡†ç¡®æ­¼ç­ISæˆå‘˜</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/2/n12727507.md#1">2021å¹´2æœˆæ˜¯ä¸ªå®Œç¾ŽçŸ©å½¢ ä¼šæœ‰å¤§äº‹å‘ç”Ÿå—ï¼Ÿ</a></li>
+<li><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/21/2/1/n12726294.md#1">ä¸­åŒ»å¸ˆç”¨2ç§æ°´æžœå¹²ç…®æ°´å– å…»èƒƒã€æ”¹å–„è„‚è‚ªè‚</a></li>
+<hr>
+
+<strong>æœ¬æ–‡è½¬è‡ª<a href="https://www.epochtimes.com">å¤§çºªå…ƒ</a>ï¼ˆå›½å†…éœ€ç”¨<a href="https://github.com/yxhgbq3433/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æ‰èƒ½è®¿é—®ï¼‰</strong><p>ä¸‹è½½<a href="https://github.com/yxhgbq3433/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æµè§ˆåŽŸæ–‡ï¼š<a href="https://www.epochtimes.com/gb/19/5/6/n11238635.htm">å¤§å­¦æ•™æŽˆæ„Ÿä½©æŽ¨èï¼šç¥žéŸµæ¼”å‡ºå±•çŽ°å¼ºå¤§èƒ½é‡</a></p><hr>
+
+<strong>æ‰‹æœºä¸Šé•¿æŒ‰å¹¶å¤åˆ¶ä¸‹é¢äºŒç»´ç åˆ†äº«æœ¬æ–‡ç« ï¼š</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/yxhgbq3433/djy/blob/master/gb/19/5/6/n11238635.md%231" title="åˆ†äº«æœ¬æ–‡ç« "></td><td VALIGN=TOP><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/wei-f1.jpg" title="ä¸­å…±çš„ä¼ªç«éª—å±€"  alt="ä¸­å…±çš„ä¼ªç«éª—å±€"></a><br><a href="https://github.com/yxhgbq3433/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/yong-h.jpg" title="æ°¸æ’çš„è§è¯"  alt="æ°¸æ’çš„è§è¯"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/shang-lnz.jpg" title="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"  alt="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/huo-z3.jpg" title="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"  alt="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/huo-z4.jpg" title="è¯äººæè¿°æ´»æ‘˜ææ€–"  alt="è¯äººæè¿°æ´»æ‘˜ææ€–"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/huo-z1.jpg" title="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"  alt="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/ma-ks.jpg" title="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"  alt="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/chang-zs.jpg" title="è—å­—çŸ³ è•´å¤©æœº"  alt="è—å­—çŸ³ è•´å¤©æœº"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/st1.jpg" title="å…³æ³¨3äº¿äººä¸‰é€€"  alt="å…³æ³¨3äº¿äººä¸‰é€€"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/jie-t.jpg" title="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"  alt="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/gao-zs.jpg" title="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"  alt="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/sj1.jpg" title="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"  alt="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/sj2.jpg" title="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"  alt="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/liangan.jpg" title="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"  alt="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/jia-ndzl.jpg" title="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"  alt="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/xiao-wd.jpg" title="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"  alt="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/yindu.jpg" title="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"  alt="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/xie-j.jpg" title="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"  alt="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/li-up.jpg" title="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"  alt="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/zfl2.jpg" title="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"  alt="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/zhen-h.jpg" title="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"  alt="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/dalu-sk.jpg" title="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"  alt="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"></a><br><a href="https://github.com/yxhgbq3433/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/zfl1.jpg" title="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"  alt="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"></a><br><a href="https://github.com/yxhgbq3433/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yxhgbq3433/djy/master/gb/300/fq1.jpg" title="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"  alt="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"></a><br></td></tr></table>
